# PFA-2D-3D

./: .gitignore  CMakeLists.txt  README.md
Project3Donuts/: CMakeLists.txt  Doxyfile.in  README.txt  notice_installation.txt  notice_utilisation.txt
Project3Donuts/doc/: Doxyfile
Project3Donuts/resources/example/: maScene.xml
Project3Donuts/resources/models/: 3donuts.xml
Project3Donuts/resources/shaders/: ColorMap.fragmentshader  DebugNormal.fragmentshader  DebugNormal.vertexshader  DepthMap.fragmentshader  StandardShading.fragmentshader  StandardShading.vertexshader
Project3Donuts/src/: global.hpp  main.cpp
Project3Donuts/src/ImageCreator/: Anaglyph.cpp  Anaglyph.hpp  AnaglyphAlgorithm1.cpp  AnaglyphAlgorithm1.hpp  AnaglyphAlgorithm2.cpp  AnaglyphAlgorithm2.hpp  AnaglyphAlgorithm3.cpp  AnaglyphAlgorithm3.hpp  AnaglyphAlgorithm4.cpp  Autostereogram.cpp  Autostereogram.hpp  AutostereogramAlgorithm1.cpp  AutostereogramAlgorithm1.hpp  AutostereogramAlgorithm2.cpp  AutostereogramAlgorithm2.hpp  AutostereogramDepthMap.cpp  AutostereogramDepthMap.hpp  Creation.cpp  Creation.hpp  CreationFile.cpp  CreationFile.hpp  CreationTools.cpp  CreationTools.hpp  Creator.cpp  Creator.hpp  DepthMap.cpp  DepthMap.hpp  DepthMapAlgorithm1.hpp  FlipBook.cpp  Flipbook.cpp  Flipbook.hpp  FlipbookAlgorithm1.hpp  FlipbookNormal.cpp  FlipbookNormal.hpp  GifWriter.cpp  GifWriter.hpp  Photograph.cpp  Photograph.hpp  PhotographNormal.cpp  PhotographNormal.hpp
Project3Donuts/src/Loader/: Camera.cpp  Loader.cpp  Loader.hpp  ObjLoader.cpp  Object.hpp
Project3Donuts/src/Scene/: BoundingBox.cpp  BoundingBox.hpp  Camera.cpp  Camera.hpp  Loader.cpp  Loader.hpp  Mesh.cpp  Mesh.hpp  ObjLoader.cpp  ObjLoader.hpp  Object.cpp  Object.hpp  PlyLoader.cpp  (+7 more)
(+244 files in other folders)
